--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 html,
 body {
+  background: rgba(84, 160, 255, 1);
   background-image: linear-gradient(
       to bottom,
       rgba(84, 160, 255, 1),
