--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,15 @@
 html,
 body {
-  background: rgba(84, 160, 255, 1);
-  background-image: linear-gradient(
+  /* background; */
+  /* background-image: linear-gradient(
       to bottom,
       rgba(84, 160, 255, 1),
       rgba(150, 235, 220, 1)
     ),
-    url('../public/dot-grid.png');
+    url('../public/dot-grid.png'); */
   padding: 0.5rem;
   margin: 0;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
